Solutions up to day 8